; ModuleID = '/home/carl/AnghaBench/esp-idf/components/openssl/library/extr_ssl_lib.c_SSL_set_default_read_buffer_len.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/openssl/library/extr_ssl_lib.c_SSL_set_default_read_buffer_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@set_bufflen = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SSL_set_default_read_buffer_len(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = ptrtoint i32* %5 to i64
  %7 = call i32 @SSL_ASSERT3(i64 %6)
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @SSL_ASSERT3(i64 %8)
  %10 = load i32, i32* @set_bufflen, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @SSL_METHOD_CALL(i32 %10, i32* %11, i64 %12)
  ret void
}

declare dso_local i32 @SSL_ASSERT3(i64) #1

declare dso_local i32 @SSL_METHOD_CALL(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
